// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
empty

      ↓ ↓ ↓ ↓ ↓ ↓

/***** Do not edit this file *****/
import { Action as Container1Action } from \\"../examples/container1/actionTypes\\";
import { Action as Container2Action } from \\"../examples/container2/actionTypes\\";

export type Action = Container1Action | Container2Action;
"
`;

exports[`single 1`] = `
"
empty

      ↓ ↓ ↓ ↓ ↓ ↓

/***** Do not edit this file *****/
import { Action as Container1Action } from \\"../examples/container1/actionTypes\\";

export type Action = Container1Action;
"
`;
